<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/transparency">

    <ImageView
        android:id="@+id/resetImageView"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:background="@color/transparency"
        android:scaleType="fitXY"
        android:src="@drawable/ic_over_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/mriobros2"
        android:text="@string/game"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="@id/resetImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/resetImageView"
        app:layout_constraintEnd_toStartOf="@id/overTextView"/>

    <TextView
        android:id="@+id/overTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/mriobros2"
        android:text="@string/game_over"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/resetImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gameTextView"
        app:layout_constraintTop_toTopOf="@id/resetImageView" />

    <TextView
        android:id="@+id/playerScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/mriobros2"
        android:text="@string/playerScore2"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetImageView" />

    <TextView
        android:id="@+id/playerScoreNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/mriobros2"
        android:text="@string/playerScoreNumber"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/playerScoreTextView"
        app:layout_constraintTop_toBottomOf="@id/resetImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>