<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/nextLevelImageView"
        android:layout_width="245dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:background="@color/transparency"
        android:scaleType="fitXY"
        android:src="@drawable/ic_next_level_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/mriobros2"
        android:text="@string/level"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/nextLevelImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/nextLevelImageView"
        app:layout_constraintEnd_toStartOf="@id/upTextView"/>

    <TextView
        android:id="@+id/upTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="@font/mriobros2"
        android:text="@string/up"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/nextLevelImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/levelTextView"
        app:layout_constraintTop_toTopOf="@id/nextLevelImageView" />

    <TextView
        android:id="@+id/playerScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="45dp"
        android:text="@string/playerScore2"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/mriobros2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/playerScoreNumberTextView"
        app:layout_constraintTop_toBottomOf="@id/nextLevelImageView"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/playerScoreNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:text="@string/playerScoreNumber"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/mriobros2"
        app:layout_constraintStart_toEndOf="@id/playerScoreTextView"
        app:layout_constraintTop_toBottomOf="@id/nextLevelImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>