<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mainConstraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/b_1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/stageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/stage"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/mriobros2"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/stageNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/stageNumber"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/mriobros2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="7dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/stageTextView"/>

    <TextView
        android:id="@+id/playerLifeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/playerLife"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stageTextView"/>

    <TextView
        android:id="@+id/timeLifeMinuteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:text="@string/timeLifeMinute"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/mriobros2"
        app:layout_constraintEnd_toStartOf="@id/timeLifeSecondTextView"
        app:layout_constraintTop_toBottomOf="@id/stageTextView" />

    <TextView
        android:id="@+id/timeLifeSecondTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/timeLifeSecond"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/mriobros2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stageTextView" />


    <ImageView
        android:id="@+id/playerImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:src="@drawable/ic_two_wheeler"
        app:layout_constraintTop_toTopOf="@id/playerLifeTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/scoreImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:visibility="invisible"
        android:src="@drawable/ic_twinkle"
        app:layout_constraintTop_toTopOf="@id/playerLifeTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/arrowImageView"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:scaleType="fitXY"
        android:layout_marginStart="102dp"
        android:src="@drawable/ic_arrow2"
        app:layout_constraintTop_toTopOf="@id/playerLifeTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/targetImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="fitXY"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/timeLifeSecondTextView"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/playerScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/playerScore"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/mriobros2"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/playerScoreNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/mriobros2"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/playerScoreTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>